----------------------------------
[2009-05-27 Ver 0.47 -> 0.48]
- Fixed bug about resize width/height is lower than 1 pixel, imagecreatetruecolor cannot create new image.(thx takahashi)
- Added 'Mobile Link Discovery' tag insert logic.
- Added client plugin for 'Livedoor' and 'Mixi'.
----------------------------------
[2009-05-21 Ver 0.46 -> 0.47]
- Fixed bug about width/height attribute exists in resized image tag.
----------------------------------
[2009-05-19 Ver 0.45 -> 0.46]
- Fixed bug about output notice message when clear cache without cache file.
- Fixed bug about output notice message with ke-tai_list.csv first line.
----------------------------------
[2009-05-18 Ver 0.44 -> 0.45]
- Modified image resize logic, use ke-tai_list.csv(special thanks http://ke-tai.org/)
----------------------------------
[2009-05-12 Ver 0.43 -> 0.44]
- Updated Text_Pictogram_Mobile, it's changed license to MIT license.(special thx yudoufu!)
----------------------------------
[2009-05-11 Ver 0.42 -> 0.43]
- Modified value of socket timeout.
- Fixed bug about preg_match pattern was invalid.
- Added function 'stripslashesRecursive'.
----------------------------------
[2009-04-16 Ver 0.41 -> 0.42]
- Fixed bug about wrong encoding detect.
----------------------------------
[2009-04-15 Ver 0.40 -> 0.41]
- Enabled guid check.
----------------------------------
[2009-04-15 Ver 0.39 -> 0.40]
- Removed needless code.(Wizin core files)
- Removed needless files.(lib)
- Removed needless code.(Wizin templates)
----------------------------------
[2009-02-13 Ver 0.38 -> 0.39]
- Added the pattern which does not modify URL.(thx black-sawa)
- Deleted unnecessary space in brackets.
----------------------------------
[2009-02-01 Ver 0.37 -> 0.38]
- Added logic for the problem which session will be closed the case of redirect with location header.(thx nazo and naoto_is)
----------------------------------
[2009-01-28 Ver 0.36 -> 0.37]
- Added class 'Wizin_Cache'.